--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "colors": "^1.1.2",
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "morgan": "~1.7.0",
+    "mysql": "^2.11.1",
+    "nodemailer": "^2.6.4",
     "serve-favicon": "~2.3.0"
   }
 }
