--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "morgan": "~1.7.0",
     "mysql": "^2.11.1",
     "nodemailer": "^2.6.4",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "url": "^0.11.0"
   }
 }
