--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "colors": "^1.1.2",
     "debug": "~2.2.0",
     "express": "~4.13.4",
+    "mongodb": "^2.2.11",
     "morgan": "~1.7.0",
     "nodemailer": "^2.6.4",
     "serve-favicon": "~2.3.0",
