--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
     "colors": "^1.1.2",
     "debug": "~2.2.0",
     "express": "~4.13.4",
-    "mongodb": "^2.2.11",
     "morgan": "~1.7.0",
+    "mysql": "^2.11.1",
     "nodemailer": "^2.6.4",
     "serve-favicon": "~2.3.0",
-    "sqlite3": "^3.1.7",
     "url": "^0.11.0"
   }
 }
