--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "colors": "^1.1.2",
+    "crypto": "0.0.3",
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "morgan": "~1.7.0",
