--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mysql": "^2.11.1",
     "nodemailer": "^2.6.4",
     "serve-favicon": "~2.3.0",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "validator": "^6.1.0"
   }
 }
