--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "./tests/test.sh"
+    "test": ". tests/test.sh"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
